<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="download_option_one">Glide - Image Loading Library by BumpTech</string>
    <string name="download_option_two">LoadApp - Current repository by Udacity</string>
    <string name="download_option_three">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="no_option_selected_message">Please select the file to download</string>
    <string name="failed_status">Fail</string>
    <string name="success_status">Success</string>
    <string name="url_input_hint">Enter your URL</string>
    <string name="url_input_title">Custom URL</string>

    <string name="swipe_down_helper_text">Swipe down to have a custom url entry</string>
    <string name="swipe_up_helper_text">Swipe up to show preset options</string>

    <string name="correct_url_toast_message">The URL is correct to download</string>
    <string name="incorrect_url_toast_message">The URL is incorrect</string>
    <string name="empty_url_toast_message">There is no URL to download</string>

    <!-- Notification -->
    <string name="notification_channel_id" translatable="false">load_app_channel</string>
    <string name="notification_channel_name">Load App Download</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree</string>
    <string name="custom_url_success_notification_message">Your custom url is downloaded!!!</string>
    <string name="failed_notification_message">Download failed</string>

    <!-- Details -->
    <string name="details_file_name_title">File name:</string>
    <string name="details_status_download_title">Status:</string>
    <string name="details_size_download_title">File size:</string>
    <string name="details_type_download_title">File type:</string>
    <string name="details_uri_download_title">Uri:</string>
    <string name="details_button_title">OK</string>
</resources>
