<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layoutDescription="@xml/content_main_scene"
    tools:context=".main.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/urlInputTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="@string/url_input_title" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_download"
            app:tint="@color/download_icon_color" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/download_option_one"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/download_option_two"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_option_three"
            android:textSize="@dimen/default_text_size" />

    </RadioGroup>

    <com.udacity.customview.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:backgroundColor="@color/colorPrimary"
        app:buttonText="@string/button_name"
        app:buttonTextSize="@dimen/default_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:loadingButtonText="@string/button_loading"
        app:progressBackgroundColor="@color/colorPrimaryDark"
        app:progressCircleColor="@color/colorAccent"
        app:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/urlInputLayout"
        style="@style/UrlInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/urlInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_text_size"
            android:hint="@string/url_input_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/swipeIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:srcCompat="@drawable/ic_swipe_down"
        app:tint="@color/colorPrimary" />

    <TextView
        android:id="@+id/swipeUpHelper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/swipe_up_helper_text" />

    <TextView
        android:id="@+id/swipeDownHelper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/swipe_down_helper_text" />

</androidx.constraintlayout.motion.widget.MotionLayout>