<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detail_layout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".detail.DetailActivity"
    tools:showIn="@layout/activity_detail"
    app:layoutDescription="@xml/content_detail_scene">

    <TextView
        android:id="@+id/file_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_file_name_title"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_status_download_title"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/file_name_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Glide - Image Loading Library by BumpTech"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/status_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Success"
        android:textSize="@dimen/default_text_size" />

    <Button
        android:id="@+id/dismiss_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/details_button_title"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size" />
</androidx.constraintlayout.motion.widget.MotionLayout>